Adiciona logica de percentagem, Adiciona rezize de texto se ele der overflow e resolve problema de result undefined quando botão de '=' era clicado sem operador

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ button {
     margin: 5px;
 }
 
+button:hover {
+    background-color: #ca8686;
+    transition: 0.5s;
+}
+
 .center {
     padding: 5%;
     border: 3px solid rgba(255, 255, 255, 0);
